@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2007-06-05
+ChangeLog - 2007-06-06
 
 
 Version 0.2.5 (under dev!):
+   * added missing IRC command 327
    * fixed hotlist when exiting search mode: current buffer is removed from
      hotlist
    * added "%M" for completion with nicks of current server (nicks on open
